--- a/client/src/components/pages/LoginPageClient/styles.css
+++ b/client/src/components/pages/LoginPageClient/styles.css
@@ -9,7 +9,7 @@
   margin: 0 auto;
   background-color:  #eee !important;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1) !important;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
