--- a/client/src/components/pages/Services/services_styles.css
+++ b/client/src/components/pages/Services/services_styles.css
@@ -6,14 +6,19 @@ header.services-masthead {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
-  }
+    /* responsive image */
+    background-repeat:no-repeat;
+    background-size: 100%;
+    background-position:top left;
+}
+  
   .servicesCard {
       text-align: center;
       border-radius: 4px;
       background: #fff;
       box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
         transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-    padding: 14px 80px 18px 36px;
+    padding: 14px 80px 18px 50px;
     cursor: pointer;
   }
   
