added login toast, updated jumbotron button, updated css

--- a/client/src/components/jumbotron3/jumbotron_styles.css
+++ b/client/src/components/jumbotron3/jumbotron_styles.css
@@ -8,9 +8,9 @@ header.masthead-3 {
   background-attachment: scroll;
   background-size: cover;
   /* responsive image */
-  background-repeat:no-repeat;
+  /* background-repeat:no-repeat;
   background-size: 100%;
-  background-position:top left;
+  background-position:top left; */
 }
 
    header.masthead-3 h1 {
