--- a/client/src/components/jumbotron4/jumbotron_styles.css
+++ b/client/src/components/jumbotron4/jumbotron_styles.css
@@ -7,10 +7,10 @@ header.masthead-3 {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
-  /* responsive image */
+  /* responsive image
   background-repeat:no-repeat;
   background-size: 100%;
-  background-position:top left;
+  background-position:top left; */
 }
 
    header.masthead-3 h1 {
