--- a/client/src/appStyles.css
+++ b/client/src/appStyles.css
@@ -108,9 +108,9 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
   /* responsive image */
-  background-repeat:no-repeat;
+  /* background-repeat:no-repeat;
   background-size: 100%;
-  background-position:top left;
+  background-position:top left; */
 }
 
 body {
