--- a/client/src/components/Form/styles.css
+++ b/client/src/components/Form/styles.css
@@ -1,5 +1,5 @@
 .btn-success {
     color: #fff;
-    background-color: #28a745 !important;
-    border-color: #28a745;
+    background-color: #73B81B !important;
+    border-color: #73B81B;
 }
