--- a/client/src/components/jumbotron/jumbotron_styles.css
+++ b/client/src/components/jumbotron/jumbotron_styles.css
@@ -26,7 +26,7 @@
   }
   
   #loginBtn {
-    background-color: #28a745;
+    background-color: #73B81B;
     cursor: pointer;/* Pointer/hand icon */
     outline: none;
     color:white;
